image overlap fix

--- a/restaurant/scss/_small.scss
+++ b/restaurant/scss/_small.scss
@@ -71,7 +71,6 @@ nav ul li.active a {
 main {
     padding: 0 2%;
     min-height: 10rem;
-    padding-bottom: 4%;
 }
 
 picture.photoA {
@@ -88,6 +87,7 @@ picture.photoB {
     width: 46%;
     margin: 0 2%;
     clear: both;
+    margin-bottom: 2%;
 }
 
 /*----------- FOOTER --------------*/
